# async-db-polars

./: README.md  pyproject.toml
async_db_polars/: db.py  pgdb.py
examples/: client.py
notebooks/: new_insert.ipynb
pg/: pgdb.py
